<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundxp"
    tools:context=".loginScreen"
    tools:ignore="ExtraText">

    // IntroLine Text
    <TextView
        android:id="@+id/intro"
        android:layout_width="235dp"
        android:layout_height="195dp"
        android:text="@string/lifetime_chart"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    // Welcome Text
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/welcome_back"
       android:textSize="25sp"
       android:textStyle="bold"
       android:textColor="@color/black"
       android:layout_gravity="center"
       android:layout_margin="10dp" />

    // Hindi Text
    <TextView
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:text="तीन बादशाह चार्ट में आप सभी लोगो का स्वागत है।"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:gravity="center" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:padding="20dp"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    // Phone Design
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputPhoneNumber"
        android:hint="@string/phone_number1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittextbackground"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    // Password Design
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputPasswordNumber"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittextbackground"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    // Forget Password Text
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp" />

    // Login Button
    <Button
        android:id="@+id/Login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="15sp"
        android:background="@drawable/loginbackground"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    // Notice Text hindi
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hindi"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        />

    // SignUp Button
    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>





</LinearLayout>




